--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/base.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/base.html
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock %}Brain Emulation</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+        
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
 
     </head>
     <body>
@@ -29,10 +32,10 @@
                 </div>
             </div>
         </nav>
-        <section class="section">
-            {% block content %}
-            {% endblock %}
-        </section>
+
+        {% block content %}
+        {% endblock %}
+
         <footer class="footer">
             <div class="columns">
                 <div class="column is-4">
@@ -45,7 +48,6 @@
                 </div>
             </div>
         </footer>
-        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
            
         {% block scripts %}
         {% endblock %}
