--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/three.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/three.html
@@ -135,7 +135,7 @@
       //loading the brain mesh + material ( async with a promise so that the animation is only applied when the model is loaded and so no undefined errors are thrown (code from https://discourse.threejs.org/t/most-simple-way-to-wait-loading-in-gltf-loader/13896/5))
       loader = new THREE.GLTFLoader();
       
-      const gltfData = await modelLoader("{% static 'content/3d/brain_org_Models_E0112A093/Brain_convertedInBlenderToGLTF_withMaterial2.glb' %}");
+      const gltfData = await modelLoader("{% static 'content/3d/brain_org_Models_E0112A093/Brain_convertedInBlenderToGLTF_withMaterial3.glb' %}");
       brain = gltfData.scene;
       scene.add(brain);
       //renderer.render( scene, camera );
@@ -199,10 +199,15 @@
          //changing the #tip element to show the info related to the selected part of the brain. The code is partially based on https://stackoverflow.com/questions/54410532/how-to-correctly-position-html-elements-in-three-js-coordinate-system
          $('#tip').css('display', 'block');
          //(inactive) targetting the sub-element of the div id:#tip by using a jquery selector syntax explained here https://stackoverflow.com/questions/6665246/nested-id-in-jquery-selector
-         $('#intro_statement').text("Orgs building "+selectedBrainAreaObject.name+" neurotech, ordered by team size:");
+         $('#intro_statement').text("Orgs building "+selectedBrainAreaObject.name);
          
          //calculating the Y position to place the text at as the sum of canvas hight + its offset from top of the page. The code is based on https://stackoverflow.com/questions/20827030/calculate-bottom-left-corner-of-a-div
          $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});
+         
+            var testDjango = '{{orgs.BRAIN_AREAS}}';
+            console.log(testDjango);
+      
+
          //organizing the HTML so that the #tip content appears on the same level as and after #NEUROPROSTHETICS_CANVAS. Using this jquery method for that https://api.jquery.com/insertafter/
          $( '#tip' ).insertAfter( "#NEUROPROSTHETICS_CANVAS" );
       }
