--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/three.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/three.html
@@ -94,7 +94,10 @@
    var brain;
    var selectedBrainAreaName;
    var selectedBrainAreaObject;
+   var selectedBrainAreaObject_humanReadibleName;    //retrieved later from the sql tables via django
    var selectedBrainAreaClickPosition;
+  
+
    var techTexture;
    var techMaterial;
 
@@ -199,14 +202,17 @@
          //changing the #tip element to show the info related to the selected part of the brain. The code is partially based on https://stackoverflow.com/questions/54410532/how-to-correctly-position-html-elements-in-three-js-coordinate-system
          $('#tip').css('display', 'block');
          //(inactive) targetting the sub-element of the div id:#tip by using a jquery selector syntax explained here https://stackoverflow.com/questions/6665246/nested-id-in-jquery-selector
-         $('#intro_statement').text("Orgs building "+selectedBrainAreaObject.name);
+         //matching the brain area name (set in blender for the GLTF child objects) with django model. The GLTF name is a slug of the brain area in django model so it will be used to retrieve full name of the brain part
+         
+         {% for brainRegion in brainRegions %}
+            if(selectedBrainAreaObject.name == '{{brainRegion.slug}}')
+            selectedBrainAreaObject_humanReadibleName = '{{brainRegion.name}}'
+         {% endfor %}
+
+         $('#intro_statement').text("Orgs building "+selectedBrainAreaObject_humanReadibleName +" neurotech:");
          
          //calculating the Y position to place the text at as the sum of canvas hight + its offset from top of the page. The code is based on https://stackoverflow.com/questions/20827030/calculate-bottom-left-corner-of-a-div
-         $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});
-         
-            var testDjango = '{{orgs.BRAIN_AREAS}}';
-            console.log(testDjango);
-      
+         $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});      
 
          //organizing the HTML so that the #tip content appears on the same level as and after #NEUROPROSTHETICS_CANVAS. Using this jquery method for that https://api.jquery.com/insertafter/
          $( '#tip' ).insertAfter( "#NEUROPROSTHETICS_CANVAS" );
