--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/three.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/three.html
@@ -5,11 +5,13 @@
 
 {% block content %}
       
+
 <div class="container-fluid" id="tip" style="display: none">
 <h3 id="intro_statement">some text</h3>
    <div class="row">
       {% for org in orgs %}
-      <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+           
+      <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3" id="{{org.slug}}" style="display: none">
          <div class="card card-tertiary">
             <div class="card-header">
               {{org.title}} ({{org.category}})
@@ -72,11 +74,6 @@
 <script src="{% static 'styles/windows-95-ui-kit/js/pixel.js' %}" type="text/javascript"></script>
 
 -->
-
-
-
-
-
 
 
 <script>
@@ -192,30 +189,49 @@
          //selectedBrainAreaObject.scale.multiplyScalar(1.1);
          console.log("i clicked on: " + selectedBrainAreaObject.name);
          //selectedBrainAreaObject.material = techMaterial;
-         //brain.children = false;
          //selectedBrainAreaObject.material.visible = false;
          
-         //changing the #tip element to show the info related to the selected part of the brain. The code is partially based on https://stackoverflow.com/questions/54410532/how-to-correctly-position-html-elements-in-three-js-coordinate-system
-         $('#tip').css('display', 'block');
-         //(inactive) targetting the sub-element of the div id:#tip by using a jquery selector syntax explained here https://stackoverflow.com/questions/6665246/nested-id-in-jquery-selector
-         //matching the brain area name (set in blender for the GLTF child objects) with django model. The GLTF name is a slug of the brain area in django model so it will be used to retrieve full name of the brain part
-         {% for brainRegion in brainRegions %}
-            if(selectedBrainAreaObject.name == '{{brainRegion.slug}}')
-            selectedBrainAreaObject_humanReadibleName = '{{brainRegion.name}}'
-         {% endfor %}
+         renderOrgInfo();
 
-         $('#intro_statement').text("Orgs building "+selectedBrainAreaObject_humanReadibleName +" neurotech:");
-         
-         //calculating the Y position to place the text at as the sum of canvas hight + its offset from top of the page. The code is based on https://stackoverflow.com/questions/20827030/calculate-bottom-left-corner-of-a-div
-         $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});      
-
-         //organizing the HTML so that the #tip content appears on the same level as and after #NEUROPROSTHETICS_CANVAS. Using this jquery method for that https://api.jquery.com/insertafter/
-         $( '#tip' ).insertAfter( "#NEUROPROSTHETICS_CANVAS" );
       }
    }
 
    
-   
+   function renderOrgInfo(){
+         //calculating the Y position to place the text at as the sum of canvas hight + its offset from top of the page. The code is based on https://stackoverflow.com/questions/20827030/calculate-bottom-left-corner-of-a-div
+         $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});      
+
+         //organizing the HTML so that the #tip content appears on the same level as and after #NEUROPROSTHETICS_CANVAS. Using this jquery method for that https://api.jquery.com/insertafter/
+         $('#tip').insertAfter( "#NEUROPROSTHETICS_CANVAS" );
+
+         //changing the #tip element to show the info related to the selected part of the brain. The code is partially based on https://stackoverflow.com/questions/54410532/how-to-correctly-position-html-elements-in-three-js-coordinate-system
+         $('#tip').css('display', 'block'); //(inactive) targetting the sub-element of the div id:#tip by using a jquery selector syntax explained here https://stackoverflow.com/questions/6665246/nested-id-in-jquery-selector
+         
+         //matching the brain area name (set in blender for the GLTF child objects) with django model. The GLTF name is a slug of the brain area in django model so it will be used to retrieve full name of the brain part. Text to be placed in the intro statement.
+         {% for brainRegion in brainRegions %}
+            if(selectedBrainAreaObject.name == '{{brainRegion.slug}}')
+            selectedBrainAreaObject_humanReadibleName = '{{brainRegion.name}}'
+         {% endfor %}
+         $('#intro_statement').text("Orgs building "+selectedBrainAreaObject_humanReadibleName +" neurotech:");
+
+         {% for org in orgs %}
+            $('#{{org.slug}}').css("display", "none");
+            {% for org_BR in orgBrainRegions %}
+               if('{{org.title}}' == '{{org_BR.org_name.title}}'){
+                  if('{{org_BR.brain_region_name.name}}' == selectedBrainAreaObject_humanReadibleName){
+                     //$('#{{org.slug}}').show();
+                     $('#{{org.slug}}').css("display", "block");
+                  }
+               }
+            {% endfor %}
+         {% endfor %}
+
+         
+//v-if="selectedBrainAreaObject_humanReadibleName === orgBrainRegions.{{org.title}}.name"
+
+
+
+   }
 
    function onDocumentMouseMove(event) {
       
