--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/contact.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/contact.html
@@ -3,7 +3,41 @@
 {% block title %}Contact | {% endblock %}
 
 {% block content %}
-   <h1 class="title">The Contact Page</h1>
+   
+   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+         <div class="card card-vaporwaveNeonBeige" style="margin: 5% 10%">
+        
+         
+            <div class="card-header">
+                <h3 style="padding: 10px 5px 10px 5px"> Why Emulate the Brain</h3>
+            </div>
+               <div class="card-body">
+                    <div class="card-text" style="padding: 10px 5px 10px 5px">
+                        <p>
+                            The world is full of suffering. We have known that since we knew anything. We all believe that since the Death of God. Asia even sooner.
+                        </p><p>
+                            The new opponent is anti-life. It is not my Territory against yours. It is not my God against yours. It is not my Race against yours. It is my no-existence against yours existence.
+                        </p><p>
+                            So if you know life is bounded by death, you will know that sooner or later you will encounter suffering. Be it your relative, or yourself, you will feel worse and worse until you feel so bad you break down. Die.
+                        </p><p>
+                            You can accept this and become of life and one with it. You can get your mind busy by solving immediate problems and suppress your pondering about death. Or you can regard life as pure suffering which must be plucked at its roots. To destroy conscious life before it hatches into being and causes suffering.
+                        </p><p>
+                            Who are we to say which path is right? What is <u>right</u>?
+                        </p><p>
+                            To find out we must be wiser. We must know more answers to even more questions. Science seems the best general tool for such endeavour. In this endeavour we should first of all concentrate on avoiding the as much of suffering in as little time as we can. To avoid famine, to avoid diseases, to avoid death.
+                        </p><p>
+                            One such plausible, yet widely considered too uncertain, path to avoid suffering leads through Neurotechnology. Some suffering is too far to be grasped by the Neurotechnology of present time. Or is it? At the end of the day, among all other paths towards maximal suffering avoidance one must place their bets on just a few. A person only has so much time and strength.
+                        </p><p>                         
+                            I bet on the  <b>significance of brains</b> and the <b>ever-accelerating innovations of computing</b>. The brain is a most incredible mechanism and if we can emulate its bio processing into electronic processing we may gain the wisdom to eliminate more suffering than any other path. I place my bet on Neurotech for its demonstrated achievements. (find the articles below) <a href="https://iopscience.iop.org/article/10.1088/1741-2552/aaaed7/meta">memory prosthesis</a> )>.  I will do all I can for it to secure us, fragile humans, the time to resolve questions about the nature of existence.
+                        </p><p>
+                            That is why to emulate a brain.
+                        </p>
+                   </div>
+               </div>
+        </div>  
+    </div> 
+   
+   
     
     s.hosovsky@gmail.com
 {% endblock %}
