--- a/be_3_9_1/BrainEmulationWebapp/apps/core/templates/frontpage.html
+++ b/be_3_9_1/BrainEmulationWebapp/apps/core/templates/frontpage.html
@@ -1,27 +1,391 @@
 ﻿{% extends 'base.html' %}
+{% load static %}
 
-{% block title %}Welcome | {% endblock %}
+{% block title %}ThreeJS Test | {% endblock %}
 
 {% block content %}
-   <div class="columns is-multiline">
-    {% for org in orgs %}
-        <div class="column is-3">
-            <div class="card">
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-content">
-                            <p class="title is-4">{{org.title}}</p>
-                            <p class="subtitle is-6">{{org.category}}</p>
-                            <p class="subtitle is-6">Has a team of {{org.team_size}}</p>
-                        </div>
-                    </div>
-                </div>
-
-                <footer class="card-footer">
-                    <a href="{% url 'org_profile' org.category.slug org.slug %}" class="card-footer-item">Details</a>
-                </footer>
+<!--
+<div class="container">start of testing UI
+   <div class="row">
+      <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+         <div class="card card-vaporwaveNeonPink">
+            <div class="card-header">
+              This is Vaporwave Neon Card w/ PINK base
             </div>
-        </div>
-    {% endfor %}
+            <div class="card-body">
+               <p class="card-text">lroeajsdjskda  aksldjajk jkn ajkd oi kjabdkjb asd . aadkjasd , akjsd a. aodh ajkn >SDSUIHANndlkBDlajkdn .</p>
+               <div class="d-flex justify-content-end mt-3">
+                  <a href="" class="btn btn-sm mr-2 btn-primary border-dark" type="button">
+                     Details
+                  </a>                    
+               </div>
+            </div>
+         </div>
+      </div> 
+      <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+         <div class="card card-vaporwaveNeonBeige">
+            <div class="card-header">
+              This is Vaporwave Neon Card w/ BEIGE base
+            </div>
+            <div class="card-body">
+               <p class="card-text">lroeajsdjskda  aksldjajk jkn ajkd oi kjabdkjb asd . aadkjasd , akjsd a. aodh ajkn >SDSUIHANndlkBDlajkdn .</p>
+               <div class="d-flex justify-content-end mt-3">
+                  <a href="" class="btn btn-sm mr-2 btn-primary border-dark" type="button">
+                     Details
+                  </a>                    
+               </div>
+            </div>
+         </div>
+      </div> 
+      <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
+         <div class="card card-vaporwaveNeonYellow">
+            <div class="card-header">
+              This is Vaporwave Neon Card w/ YELLOW base
+            </div>
+            <div class="card-body">
+               <p class="card-text">lroeajsdjskda  aksldjajk jkn ajkd oi kjabdkjb asd . aadkjasd , akjsd a. aodh ajkn >SDSUIHANndlkBDlajkdn .</p>
+               <div class="d-flex justify-content-end mt-3">
+                  <a href="" class="btn btn-sm mr-2 btn-primary border-dark" type="button">
+                     Details
+                  </a>                    
+               </div>
+            </div>
+         </div>
+      </div>       
+      
    </div>
+   end of testing UI
+</div>   
+-->   
+
+<div class="container-fluid" id="tip" style="display: none">
+<h1 id="intro_statement" style="text-align: center">some text</h1>
+   <div class="row">
+      {% for org in orgs %}
+           
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4" id="{{org.slug}}" style="display: none">
+         {% if org.category.slug == "startup" or org.category.slug == "sme" %}
+         <div class="card card-vaporwaveNeonPink">
+         {% elif org.category.slug == "lab" or org.category.slug == "foundation" %}
+         <div class="card card-vaporwaveNeonBeige">
+         {% elif org.category.slug == "incubator" or org.category.slug == "accelerator" or org.category.slug == "venture_capital" or org.category.slug == "investment_fund" %}
+         <div class="card card-vaporwaveNeonYellow">
+         {% else %}
+         <div class="card card-primary">
+         {% endif %}
+         
+            <div class="card-header">
+              {{org.title}} ({{org.category}} in {{org.country_hq}})
+            </div>
+               <div class="card-body">
+                  <p class="card-text">{{org.description}}</p>
+                  <div class="text-center">
+                    <a href="{% url 'org_profile' org.category.slug org.slug %}" class="btn btn-sm mr-2 btn-neonPink" type="button">
+                      Details
+                    </a>                    
+                  </div>
+                </div>
+        </div>
+      </div> 
+      
+    {% endfor %}
+
+   </div>
+</div>   
+
+
+
+
+
+<!-- 
+
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<link rel="stylesheet" type="text/css" href="{% static 'styles/windows-95-ui-kit/css/pixel.css' %}" />
+<script src="{% static 'styles/windows-95-ui-kit/js/pixel.js' %}" type="text/javascript"></script>
+
+-->
+
+
+<script>
+
+   var scene; 
+   var camera;
+
+   var NEUROPROSTHETICS_CANVAS;
+   var canvasBounds; 
+   var brain;
+   var selectedBrainAreaName;
+   var selectedBrainAreaObject;
+   var selectedBrainAreaObject_humanReadibleName;    //retrieved later from the sql tables via django
+   var selectedBrainAreaClickPosition;
+   var previouslySelectedBrainArea;
+  
+
+   var techTexture;
+   var techMaterial;
+
+   var INTERSECTED;
+   var raycaster;
+   var loader;
+   const mouse = new THREE.Vector2();
+
+   init();
+   animate();
+
+
+   async function init() {
+      scene = new THREE.Scene();
+      camera = new THREE.PerspectiveCamera(4, window.innerWidth / (window.innerHeight/1.5), 1, 1000);
+      camera.position.z = 2.5;
+      //camera.position.y = -0.06;
+      //camera.lookAt( scene.position );
+      scene.add(new THREE.AxesHelper(500));
+
+      renderer = new THREE.WebGLRenderer({alpha:true});
+      controls = new THREE.OrbitControls(camera, renderer.domElement);
+      controls.enableZoom = false;
+      controls.update();
+
+
+      //associating an HTML element with the three.js content
+      renderer.domElement.id = 'NEUROPROSTHETICS_CANVAS';
+      renderer.outputEncoding = THREE.sRGBEncoding;
+
+      //renderer.setPixelRatio( window.devicePixelRatio );
+      renderer.setSize(window.innerWidth, window.innerHeight/1.5);
+      document.body.appendChild(renderer.domElement); 
+      
+      
+      //adding light
+      const light = new THREE.PointLight(0xf9d1fb, 1, 300);
+      light.position.set(50, 50, 50);
+      scene.add(light);
+
+      //figuring out whether some part of the brain has been clicked on        
+      raycaster = new THREE.Raycaster();
+      document.addEventListener( 'mousemove', onDocumentMouseMove );
+      //NEUROPROSTHETICS_CANVAS.addEventListener('click', onCanvasClick);
+
+      //resize and recentre the brain to fit window (responsive design) from https://subscription.packtpub.com/book/web_development/9781784392215/1/ch01lvl1sec15/automatically-resize-the-output-when-browser-size-changes
+      window.addEventListener('resize', onResize, false);  
+      
+      //loading the brain mesh + material ( async with a promise so that the animation is only applied when the model is loaded and so no undefined errors are thrown (code from https://discourse.threejs.org/t/most-simple-way-to-wait-loading-in-gltf-loader/13896/5))
+      loader = new THREE.GLTFLoader();
+      loader.load(
+         "{% static 'content/3d/brain_org_Models_E0112A093/Brain_convertedInBlenderToGLTF_withMaterial3.glb' %}",
+         function (gltf) {
+            brain = gltf.scene;
+            scene.add(brain);
+            //animate();
+         },
+         function (xhr) {
+            console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+         },
+         function (error) {
+            console.error(error);
+         }
+      );
+
+      //loading texture for later brain area selection (when user selects a brain area this texture will be applied to it, implying that the area has been computerized)
+      techTexture = new THREE.TextureLoader().load(
+         "{% static 'content/3d/tech_brain/greenMotherBoard2.png' %}"
+      );
+      techMaterial = new THREE.MeshStandardMaterial({map:techTexture});
+
+      
+
+   
+
+   }
+
+   function onResize() {
+
+      camera.aspect = window.innerWidth / (window.innerHeight/1.5);
+      camera.updateProjectionMatrix();
+      controls.update();
+
+      renderer.setSize(window.innerWidth, (window.innerHeight/1.5));
+      
+      //updating the #tip div's location when the window is resized. For more info on this div see method onBrainAreaClicked
+      $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});
+
+   }
+   
+   function onCanvasClick(){
+      //only firing the event if the brain was clickled. I.e. not when clicked inside the canvas but outside the brain
+      if(INTERSECTED){
+         //if any brain area was clicked, then when the next area is clicked the old one should return to original color/texture
+         if(previouslySelectedBrainArea) previouslySelectedBrainArea.material.emissive.setHex( INTERSECTED.currentHex );
+         INTERSECTED.material.emissive.setHex( 0x0000FF )
+         
+         onBrainAreaClicked (INTERSECTED.name);
+
+         previouslySelectedBrainArea = INTERSECTED;
+         INTERSECTED = null;
+      }
+      else{
+         onBrainAreaClicked ("peripheral_NS");
+      }
+   }
+   
+   function onBrainAreaClicked(brainAreaName){
+      // texture from  <a href='https://pngtree.com/free-backgrounds'>free background photos from pngtree.com</a>
+      var wireframe = new THREE.MeshBasicMaterial({
+         color: 0x00000,
+         wireframe: true,
+         transparent: false,
+         opacity: 1.0      
+      });
+      
+      //if its the same brain area as previously selected do nothing
+      if(brainAreaName != selectedBrainAreaName){
+         selectedBrainAreaName = brainAreaName;
+         selectedBrainAreaObject = brain.getObjectByName(selectedBrainAreaName);
+         //selectedBrainAreaObject.scale.multiplyScalar(1.1);
+         console.log("i clicked on: " + selectedBrainAreaObject.name);
+         //selectedBrainAreaObject.material = techMaterial;
+         //selectedBrainAreaObject.material.visible = false;
+         
+         renderOrgInfo();
+
+      }
+   }
+
+   
+   function renderOrgInfo(){
+         //calculating the Y position to place the text at as the sum of canvas hight + its offset from top of the page. The code is based on https://stackoverflow.com/questions/20827030/calculate-bottom-left-corner-of-a-div
+         $('#tip').css({ left: 0, top: ($('#NEUROPROSTHETICS_CANVAS').offset().top + $('#NEUROPROSTHETICS_CANVAS').outerHeight(true))});      
+
+         //organizing the HTML so that the #tip content appears on the same level as and after #NEUROPROSTHETICS_CANVAS. Using this jquery method for that https://api.jquery.com/insertafter/
+         $('#tip').insertAfter( "#NEUROPROSTHETICS_CANVAS" );
+
+         //changing the #tip element to show the info related to the selected part of the brain. The code is partially based on https://stackoverflow.com/questions/54410532/how-to-correctly-position-html-elements-in-three-js-coordinate-system
+         $('#tip').css('display', 'block'); //(inactive) targetting the sub-element of the div id:#tip by using a jquery selector syntax explained here https://stackoverflow.com/questions/6665246/nested-id-in-jquery-selector
+         
+         //matching the brain area name (set in blender for the GLTF child objects) with django model. The GLTF name is a slug of the brain area in django model so it will be used to retrieve full name of the brain part. Text to be placed in the intro statement.
+         {% for brainRegion in brainRegions %}
+            if(selectedBrainAreaObject.name == '{{brainRegion.slug}}')
+            selectedBrainAreaObject_humanReadibleName = '{{brainRegion.name}}'
+         {% endfor %}
+         $('#intro_statement').text(selectedBrainAreaObject_humanReadibleName + " emulations"); //Here I am simply putting the brain region name (in a readable format) below the 3d canvas
+
+         //Reviewing if the orgs work on the selected brain area, and only if they do I shell display them in the html
+         {% for org in orgs %}
+            //simple reset. If an org has been displayed, this statement will make it invisible again when clicking on a brain region
+            $('#{{org.slug}}').css("display", "none");
+            {% for org_BR in orgBrainRegions %}
+               //if the name of the org (in the current iteration of the for loop) exists inside the table which associates a brain region to an org, then continue...
+               if('{{org.title}}' == '{{org_BR.org_name.title}}'){
+                  //if the org is associated with (works on) the selected brain region, display it
+                  if('{{org_BR.brain_region_name.name}}' == selectedBrainAreaObject_humanReadibleName){
+                     $('#{{org.slug}}').css("display", "block");
+                  }
+               }
+            {% endfor %}
+         {% endfor %}
+
+   }
+
+   function onDocumentMouseMove(event) {
+      
+      event.preventDefault();
+
+      //responsive mouse location for selecting brain areas (when changing window size/devices or when canvas is not full screen) based on https://stackoverflow.com/questions/36880033/clicking-objects-in-three-js-when-the-canvas-is-not-full-screen-r74
+      //[why done this way] need to getElementById each time as ThreeJS generates a canvas for the objects used after they are loaded
+      NEUROPROSTHETICS_CANVAS = document.getElementById("NEUROPROSTHETICS_CANVAS");
+      canvasBounds = NEUROPROSTHETICS_CANVAS.getBoundingClientRect();
+      mouse.x = ( ( event.clientX - canvasBounds.left ) / ( canvasBounds.right - canvasBounds.left ) ) * 2 - 1;
+      mouse.y = - ( ( event.clientY - canvasBounds.top ) / ( canvasBounds.bottom - canvasBounds.top) ) * 2 + 1;
+
+   }
+
+
+   function animate() {
+      requestAnimationFrame(animate);
+
+      render();
+
+      //brain.rotation.x += 0.01;
+      brain.rotation.y += 0.01;
+      //brain.rotation.z += 0.01;
+
+
+
+   }
+
+
+   function render() {
+      camera.updateMatrixWorld();
+     	controls.update();
+
+
+
+      // find intersections where mouse hovers over a brain area (code from https://github.com/mrdoob/three.js/blob/master/examples/webgl_interactive_cubes.html)    
+		raycaster.setFromCamera( mouse, camera );
+		const intersects = raycaster.intersectObjects( brain.children );
+		
+
+      if ( intersects.length > 0 ) {
+         if ( INTERSECTED != intersects[ 0 ].object ) {
+            if ( INTERSECTED ) INTERSECTED.material.emissive.setHex( INTERSECTED.currentHex );
+
+            INTERSECTED = intersects[ 0 ].object;
+            INTERSECTED.currentHex = INTERSECTED.material.emissive.getHex();
+            INTERSECTED.material.emissive.setHex( 0xff0000 );
+
+            NEUROPROSTHETICS_CANVAS.addEventListener('click', function(){
+               //only firing the event if the brain was clickled. I.e. not when clicked inside the canvas but outside the brain
+               if(INTERSECTED){
+                  //if any brain area was clicked, then when the next area is clicked the old one should return to original color/texture
+                  if(previouslySelectedBrainArea) previouslySelectedBrainArea.material.emissive.setHex( INTERSECTED.currentHex );
+                  INTERSECTED.material.emissive.setHex( 0x0000FF )
+                  
+                  onBrainAreaClicked (INTERSECTED.name);
+
+                  previouslySelectedBrainArea = INTERSECTED;
+                  INTERSECTED = null;
+               }
+               }
+            );    
+         }
+		} else {
+			if ( INTERSECTED )   INTERSECTED.material.emissive.setHex( INTERSECTED.currentHex );   
+               
+			INTERSECTED = null;
+		}
+
+      renderer.render(scene, camera);
+   }
+
+   
+   // this utility function allows you to use any three.js loader with promises and async/await
+   function modelLoader(url) {
+      return new Promise((resolve, reject) => {
+         loader.load(
+            url,
+            data => resolve(data),
+            function (xhr) {
+               console.log((xhr.loaded / xhr.total * 100) + '% loaded');
+            },
+            function (error) {
+               console.error(error);
+            }
+         );
+      });
+   }
+
+   
+
+   init().catch(error => {
+      console.error(error);
+   });
+
+
+</script>
+
+
+
+
 {% endblock %}
